objects/Payment_Request__c.object
<CustomObject>
    <fields>
        <fullName>Advisory_Board_Liaison__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisory Board Liaison</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Comment_Check__c</fullName>
        <description>related to CR-2083. Ultimately used to require comments when an approval is rejected.</description>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Department Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Payable Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Num__c</fullName>
        <label>Batch #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amt_is_Greater_or_Equal_Pmt_Amt__c</fullName>
        <description>used in the Payment Request approval process to ensure the budgeted amount is greater or equal to the payment amount.</description>
        <formula>IF( Total_Budget_Allocation_Payment_Amount__c &gt;= Amount__c , TRUE, FALSE)</formula>
        <label>Budget Amt is Greater or Equal Pmt Amt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Budget Manager associated with the selected department.</description>
        <label>Budget Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <defaultValue>TODAY ()</defaultValue>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Department head associated with the related Budget Allocation. Automatically populated via trigger.</description>
        <label>Department Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the Payment Request contains an attachment.  This is required for the payment to be submitted for approval.</description>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Num__c</fullName>
        <label>Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Received_Date__c</fullName>
        <label>Invoice Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <inlineHelpText>Enter the name of the Meeting for this expense, or leave blank if expense not associated with a National Meeting.</inlineHelpText>
        <label>Meeting</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Quarter__c</fullName>
        <formula>&quot;Q&quot; &amp; TEXT( CEILING(Month( Invoice_Due_Date__c ) / 3) )</formula>
        <label>Payment Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Currency__c</fullName>
        <inlineHelpText>Enter the foreign currency amount requested.  Only convert to USD when payment is requested in USD by the vendor.</inlineHelpText>
        <label>Payment Request: Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP – Great British Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD – US Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD – Australian Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD – Singapore Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP – Chilean Pesos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR – Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD – Canadian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL – Brazilian Real</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Sent__c</fullName>
        <label>Payment Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pmt_Amt_greater_than_Purchase_Amt__c</fullName>
        <formula>IF(  Amount__c &gt;  Total_Qx_Budget_Allocation_Amt__c , TRUE, FALSE)</formula>
        <label>Pmt Amt greater than Purchase Amt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <inlineHelpText>Describe the products or services on this invoice.</inlineHelpText>
        <label>Products/Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Num__c</fullName>
        <formula>Purchase_Request__r.Purchase_Approval_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Request</label>
        <referenceTo>Purchase_Request__c</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Num__c</fullName>
        <inlineHelpText>Enter the check number or wire/credit card information.</inlineHelpText>
        <label>Reference #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Awaiting Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid in Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Partial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User creating the request.</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Budget_Allocation_Payment_Amount__c</fullName>
        <inlineHelpText>Total amount included in related Budget Allocation Payment records.</inlineHelpText>
        <label>Total Budget Allocation Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Qx_Budget_Allocation_Amt__c</fullName>
        <description>Total of all budget allocation amounts for the Quarter this payment request is in.</description>
        <label>Total Qx Budget Allocation Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Payment Request.  This field drives validation rules limiting amount for direct payments and verifying Purchase Request is present when the type is Purchase Request Payment.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct to Vendor Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Request Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Purchase__c</fullName>
        <label>Type of Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>Purchased Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance and Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Hardware/Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Licenses (SAAS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings/Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultants/Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Purchases and Subscriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Vendor Account record types may be selected.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Requests</relationshipLabel>
        <relationshipName>Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_do_we_need_it__c</fullName>
        <inlineHelpText>Provide information on why this product or service is required and how it will benefit Advisory Board.</inlineHelpText>
        <label>Why do we need it?</label>
        <type>TextArea</type>
    </fields>
    <label>Payment Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Payment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Greater_Than_1000</fullName>
        <active>true</active>
        <description>Direct to vendor payments cannot be greater than $1,000</description>
        <errorConditionFormula>AND(
 Amount__c &gt; 1000,
 ISPICKVAL(Type__c  , &quot;Direct to Vendor Payment&quot;) 
)</errorConditionFormula>
        <errorMessage>If the Payment Request is greater than $1000, the Type must be Purchase Request Payment and a Purchase Request needs to be associated with the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>External_Vendors_must_be_below_1000</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(TEXT(Vendor__r.Vendor_Type__c)= &quot;External-Supplier&quot; || TEXT(Vendor__r.Vendor_Type__c)= &quot;External-Intangible&quot;),
ISBLANK( Purchase_Request__c),
Amount__c &gt;= 1000
)</errorConditionFormula>
        <errorMessage>If the Vendor Type is External and there is no Purchase Request associated, the Amount must be under $1000.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Req_locked_to_all_but_AP</fullName>
        <active>false</active>
        <description>This validation rule prevents all users not in the Profile &quot;Accounts Payable&quot; from editing a record after it has been approved.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL( Status__c , &quot;Approved - Awaiting Payment&quot;),
ISPICKVAL( Status__c , &quot;Paid in Full&quot;),
ISPICKVAL( Status__c , &quot;Paid Partial&quot;)),
$Profile.Name  &lt;&gt; &quot;Accounts Payable&quot;
)</errorConditionFormula>
        <errorMessage>This record is in a status associated with an approved Payment Request - only users in the Accounts Payable profile can edit this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Request_Required</fullName>
        <active>true</active>
        <description>If Type is Purchase Request Payment, require Purchase Request field to be filled in.</description>
        <errorConditionFormula>AND(
 ISBLANK(Purchase_Request__c ),
 ISPICKVAL(Type__c  , &quot;Purchase Request Payment&quot;) 
)</errorConditionFormula>
        <errorMessage>Purchase Request must be populated when the Type is Purchase Request Payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Request_must_be_approved</fullName>
        <active>true</active>
        <description>The Purchase Request associated with a Payment Request must be already approved before a Payment Request can be added.</description>
        <errorConditionFormula>(TEXT(Purchase_Request__r.Approval_Stage__c) &lt;&gt; &quot;Approved&quot;) &amp;&amp;
((ISNEW() &amp;&amp; NOT(ISBLANK(Purchase_Request__c))) || ISCHANGED(Purchase_Request__c))</errorConditionFormula>
        <errorMessage>The Purchase Request associated with this Payment Request has not been approved. Please ensure it is approved before trying to create a Payment Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_must_be_approved_Payment_Req</fullName>
        <active>true</active>
        <description>The Vendor must be approved before a Payment Request can be created</description>
        <errorConditionFormula>(ISNEW () || ISCHANGED(Vendor__c)) &amp;&amp; (TEXT(Vendor__r.Status__c) = &quot;New - Pending Approval&quot; || TEXT(Vendor__r.Status__c) = &quot;Prohibited&quot;)</errorConditionFormula>
        <errorMessage>The Vendor associated with this Payment Request has not been approved. Please ensure it is approved before trying to create a Payment Request.</errorMessage>
    </validationRules>
</CustomObject>